fixed weird spacing issue on the responsive side
the headers aint look the same on blog and home.. tweaked their align-items to be the same.. didnt affect the desktop

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ header.page-header { /* selects header elements that have the class name of page
   flex-wrap: wrap;
   padding: 20px 75px;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
 }
 
 header nav, header div, header .logo{
